<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="271dp"
    tools:layout_editor_absoluteY="-79dp">

    <ImageView
        android:id="@+id/capa"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <Button
        android:id="@+id/detalhes"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_detalhes"
        android:padding="0dp"
        android:text="@string/detalhes"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/Assistir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Assistir"
        app:layout_constraintTop_toTopOf="@+id/Assistir" />

    <TextView
        android:id="@+id/cativante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cativante"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/brutal"
        app:layout_constraintEnd_toEndOf="@id/verticaldireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/brutal"
        app:layout_constraintTop_toTopOf="@+id/brutal" />

    <TextView
        android:id="@+id/brutal"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_margin="2dp"
        android:padding="2dp"
        android:text="@string/brutal"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/cativante"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/magistral"
        tools:layout_editor_absoluteY="185dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalterceira"/>

    <TextView
        android:id="@+id/magistral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magistral"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/brutal"
        app:layout_constraintEnd_toStartOf="@+id/brutal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/verticalesquerda"
        app:layout_constraintTop_toTopOf="@+id/brutal" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/series"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/filmes"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:text="@string/filmes"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/minhalista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minhalista"
        app:layout_constraintTop_toTopOf="@+id/minhalista"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/minhalista"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:text="@string/minha_lista_head"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/series"
        app:layout_constraintEnd_toStartOf="@+id/filmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/series"
        app:layout_constraintTop_toTopOf="@+id/series"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/series"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:text="@string/series"
        android:textColor="@color/branco"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/minhalista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintVertical_bias="0.648" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalprimeira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <ImageView
        android:id="@+id/logofilme"
        android:layout_width="196dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalsegunda"
        app:srcCompat="@drawable/logomovie" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalsegunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalterceira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalesquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticaldireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <Button
        android:id="@+id/Assistir"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primaria_variacao"
        android:drawableLeft="@drawable/ic_executar"
        android:text="@string/assistir"
        app:layout_constraintEnd_toStartOf="@+id/detalhes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minhalistaicon"
        app:layout_constraintTop_toBottomOf="@id/brutal"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/minhalistaicon"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_adicionar"
        android:padding="0dp"
        android:text="@string/minha_lista"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/Assistir"
        app:layout_constraintEnd_toStartOf="@+id/Assistir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Assistir" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:text="@string/lancamento"
        android:textColor="@color/branco"
        app:layout_constraintStart_toStartOf="@id/verticalesquerda"
        app:layout_constraintTop_toBottomOf="@+id/Assistir" />

    <ImageView
        android:id="@+id/sonho"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toStartOf="@+id/poderoso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/verticalesquerda"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/f1"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/poderoso"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/sonho"
        app:layout_constraintEnd_toStartOf="@+id/forrest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sonho"
        app:layout_constraintTop_toTopOf="@+id/sonho"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/forrest"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/poderoso"
        app:layout_constraintEnd_toEndOf="@id/verticaldireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/poderoso"
        app:layout_constraintTop_toTopOf="@+id/poderoso"
        app:srcCompat="@drawable/f5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FERNANDO FERRARI BARBOSA"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />


</androidx.constraintlayout.widget.ConstraintLayout>